hphp/hack/test/typecheck/subtype_array4.php.exp
File "subtype_array4.php", line 24, characters 11-12:
Invalid argument (Typing[4110])
File "subtype_array4.php", line 19, characters 31-33:
Expected int
File "subtype_array4.php", line 12, characters 35-38:
But got bool
